@@ -6,14 +6,9 @@ Before 1.2:
         * include/avr/twi.h
     - Move the following to examples and document
         * include/avr/parity.h
-    - In include/avr/delay.h, add macros to allow specifying delays directly 
-      in microseconds (with MCU clock frequency defined by the user).  With 
-      constant delays, all floating point math would be done at compile time. 
-      A patch has been posted to the avr-libc list, see [6].
     - Document:
         * include/avr/crc16.h
         * include/avr/parity.h
-        * include/avr/delay.h (also see above)
         * merge chapter 3 from Rich Neswold's doc. Needs some rewriting to
           update for newer tools. (explanation of start code)
         * gcrt1.S
@@ -41,6 +36,5 @@ Before 1.2:
 [3] http://mail.nongnu.org/archive/html/avr-libc-dev/2002-08/msg00117.html
 [4] http://mail.nongnu.org/archive/html/avr-libc-dev/2002-09/msg00038.html
 [5] http://mail.nongnu.org/archive/html/avr-libc-dev/2002-12/msg00034.html
-[6] http://mail.nongnu.org/archive/html/avr-libc-dev/2003-01/msg00040.html
 [7] http://mail.nongnu.org/archive/html/avr-libc-dev/2003-01/msg00077.html
 [8] http://mail.nongnu.org/archive/html/avr-libc-dev/2003-09/msg00030.html
